--- a/Week 6/project/index.html
+++ b/Week 6/project/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Oluwadamilare Obalana's week 6 project">
-    <title>W06 Project</title>
+    <title>Oluwadamilare Obalana's Week 6 Project</title>
 </head>
 <body>
+    <h1>Hello</h1>
+    <h3>Welcome to my week 6 project</h3>
+    <p>This project would fetch data from <a href="https://pokeapi.co/api/v2/pokemon/">Pokeapi.co</a> and display the content here</p>
     
+    <section id="output"></section>
+    <ul id="outputList"></ul>
 </body>
 </html>
