--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
                 <li>Lesson 01: <a href="Week 1/debug.html">Debug</a></li>
                 <li>Lesson 02 Part 1: <a href="Week 2/dom-basics.html">Dom Baics</a></li>
                 <li>Lesson 02 Part 2: <a href="Week 2/oprator.html">Dom Baics</a></li>
+                <li>Lesson 02 Assignment: <a href="week02/task2.html">Week 2 assignment</a></li>
                 <li>Lesson 03 Part 1: <a href="Week 3/array_activity.html">Array Activity</a></li>
                 <li>Lesson 03 Part 2: <a href="Week 3/dom_activity.html">Dom Activity</a></li>
+                <li>Lesson 03 Assignment: <a href="week03/task3.html">Week 3 assignment</a></li>
                 <li>Lesson 04 Part 1: <a href="Week 4/functions/functions_practice.html">Functions Practice</a></li>
                 <li>Lesson 04 Part 2: <a href="Week 4/objects/1.html">Objects Practice</a></li>
+                <li>Lesson 04 Assignment: <a href="week04/task4.html">Week 4 assignment</a></li>
                 <li>Lesson 05 Part 1: <a href="Week 5/fetch/fetch.html">Fetch</a></li>
                 <li>Lesson 05 Part 2: <a href="Week 5/modules/modules.html">Modules</a></li>
+                <li>Lesson 05 Assignment: <a href="week05/student_files/task5.html">Week 5 assignment</a></li>
                 <li>Lesson 06 Part 1: <a href="Week 6/loopActivity/index.html">Loop Activity</a></li>
                 <li>Project: <a href="Week 6/project/index.html">Final Project</a></li>
             </ul>
