My week 6 project

--- a/Week 6/project/index.html
+++ b/Week 6/project/index.html
@@ -15,13 +15,13 @@
         <h1>Hello</h1>
         <h3>Welcome to my week 6 project</h3>
         <p>This project would fetch data from <a
-                href="https://pokeapi.co/api/v2/pokemon/">Pokeapi.co</a> and display the content
-            here</p>
+                href="https://pokeapi.co/api/v2/pokemon/">Pokeapi.co</a> and display the content in it's default view, then you can use the sort to change how the content would be displayed.</p>
         <p>
             Sort by:
             <select id="sortBy">
-                <option value="nameAscending"> Name Ascending</option>
-                <option value="nameDescending"> Name Descending</option>
+                <option value="default"> Default</option>
+                <option value="ascending"> Name Ascending</option>
+                <option value="descending"> Name Descending</option>
             </select>
         </p>
         <section id="output"></section>
