--- a/Week 6/project/index.html
+++ b/Week 6/project/index.html
@@ -24,7 +24,7 @@
                 <option value="descending"> Name Descending</option>
             </select>
         </p>
-        <section id="output"></section>
+        <div id="output"></div>
     </div>
     <script src="script/main.js"></script>
 </body>
