New Project Addition

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li>Lesson 05 Assignment: <a href="week05/student_files/task5.html">Week 5 assignment</a></li>
                 <li>Lesson 06 Part 1: <a href="Week 6/loopActivity/index.html">Loop Activity</a></li>
                 <li>Project: <a href="Week 6/project/index.html">Final Project</a></li>
+                <li>Project Reworked: <a href="Week 6/project1/index.html">Final Project Reworked</a></li>
             </ul>
         </div>
         <hr>
